--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="js/main.js"></script>
+    <button class="switch"></button>
   </body>
 </html>
