--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+</head>
+<body>
+  <div class="header">STORE STORE</div>
+  <div class="gallery">
+    <div class="card">
+      <div class="card-title">ASJKD</div>
+      <div class="card-image"><img src="" alt=""></div>
+      <div class="card-desciption">asjdkhsajdhsahji
+      </div>
+    </div>
     <div id="app"></div>
     <script type="module" src="js/main.js"></script>
-    <button class="switch"></button>
+    <button class="switch">CLICK</button>
+  </div>
   </body>
+<script src="js/main.js"></script>
 </html>
