--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -16,51 +16,10 @@
       <div class="card-desciption">asjdkhsajdhsahji
       </div>
     </div>
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
     <div id="app"></div>
     <script type="module" src="js/main.js"></script>
     <button class="switch">CLICK</button>
+    <button class="switch1">CLICK 2</button>
   </div>
   </body>
 <script src="js/main.js"></script>
