--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,7 +12,7 @@
   <div class="gallery">
     <div class="card">
       <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="" alt=""></div>
+      <div class="card-image"><img src="https://images.unsplash.com/photo-1700427296131-0cc4c4610fc6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8" alt=""></div>
       <div class="card-desciption">asjdkhsajdhsahji
       </div>
     </div>
