--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,16 +10,16 @@
 <body>
   <div class="header">STORE STORE</div>
   <div class="gallery">
-    <div class="card">
-      <div class="card-title">ASJKD</div>
-      <div class="card-image"><img src="https://images.unsplash.com/photo-1700427296131-0cc4c4610fc6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8" alt=""></div>
-      <div class="card-desciption">asjdkhsajdhsahji
-      </div>
-    </div>
     <div id="app"></div>
     <script type="module" src="js/main.js"></script>
-    <button class="switch">CLICK</button>
-    <button class="switch1">CLICK 2</button>
+    <div class="buttons">
+    <button class="switch">WARM/COOL</button>
+    <button class="switch1">DARK</button>
+    <button class="switch2">Vegan</button>
+    <button class="switch3">Seafood</button>
+    <button class="switch4">Entrees</button>
+    <button class="switch5">Appetizers</button>
+    </div>
   </div>
   </body>
 <script src="js/main.js"></script>
