--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,17 +10,19 @@
 <body>
   <div class="header">STORE STORE</div>
   <div class="gallery">
-    <div id="app"></div>
-    <script type="module" src="js/main.js"></script>
-    <div class="buttons">
-    <button class="switch">WARM/COOL</button>
-    <button class="switch1">DARK</button>
-    <button class="switch2">Vegan</button>
-    <button class="switch3">Seafood</button>
-    <button class="switch4">Entrees</button>
-    <button class="switch5">Appetizers</button>
+    <div class="card-gallery">
+      <button class="switch3">Seafood</button>
     </div>
-  </div>
+    <div class="buttons">
+      <button class="switch">WARM/COOL</button>
+      <button class="switch1">DARK</button>
+      <button class="switch2">Vegan</button>
+      <button class="switch4">Entrees</button>
+      <button class="switch5">Appetizers</button>
+      </div>
+  </div>    
+  <div id="app"></div>
+    <script type="module" src="js/main.js"></script>
   </body>
 <script src="js/main.js"></script>
 </html>
