--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -11,14 +11,14 @@
   <div class="header">STORE STORE</div>
   <div class="gallery">
     <div class="card-gallery">
-      <button class="switch3">Seafood</button>
     </div>
     <div class="buttons">
       <button class="switch">WARM/COOL</button>
       <button class="switch1">DARK</button>
-      <button class="switch2">Vegan</button>
-      <button class="switch4">Entrees</button>
-      <button class="switch5">Appetizers</button>
+      <button class="food-btn" id="switch2">Vegan</button>
+      <button class="food-btn" id="switch3">Entrees</button>
+      <button class="food-btn" id="switch4">Appetizers</button>
+      <button class="food-btn" id="switch5">Seafood</button>
       </div>
   </div>    
   <div id="app"></div>
