--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,24 +5,29 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <title>Vite App</title>
 </head>
 <body>
-  <div class="header">STORE STORE</div>
-  <div class="gallery">
-    <div class="card-gallery">
-    </div>
+  <div class="header"><h1 class="animation">Elmer's Bistro and Grill</h1></div>
     <div class="buttons">
-      <button class="switch">WARM/COOL</button>
-      <button class="switch1">DARK</button>
-      <button class="food-btn" id="switch2">Vegan</button>
-      <button class="food-btn" id="switch3">Entrees</button>
-      <button class="food-btn" id="switch4">Appetizers</button>
-      <button class="food-btn" id="switch5">Seafood</button>
+      <p>Theme:</p>
+      <button class="switch">Warm/Cool</button> <br>
+      <p>Menu Options:</p>
+      <button class="food-btn">All</button>
+      <button class="food-btn">Vegan</button>
+      <button class="food-btn">Entree</button>
+      <button class="food-btn">Appetizer</button>
+      <button class="food-btn">Seafood</button>
+      <button class="food-btn">Dessert</button>
       </div>
+      <div class="gallery">
+
   </div>    
   <div id="app"></div>
     <script type="module" src="js/main.js"></script>
   </body>
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
 </html>
